Vuln and lib updates as per Security(CSDL-29359)